-- Create worker_profiles table for palliative care staff
CREATE TABLE public.worker_profiles (
  id UUID NOT NULL DEFAULT gen_random_uuid() PRIMARY KEY,
  user_id UUID NOT NULL REFERENCES auth.users(id) ON DELETE CASCADE UNIQUE,
  worker_id TEXT NOT NULL UNIQUE,
  display_name TEXT NOT NULL,
  department TEXT DEFAULT 'Palliative Care',
  job_title TEXT DEFAULT 'Care Worker',
  certifications TEXT[] DEFAULT '{}',
  avatar_url TEXT,
  phone TEXT,
  mfa_enrolled BOOLEAN DEFAULT false,
  biometric_enrolled BOOLEAN DEFAULT false,
  last_login_at TIMESTAMP WITH TIME ZONE,
  created_at TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT now(),
  updated_at TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT now()
);

-- Enable RLS
ALTER TABLE public.worker_profiles ENABLE ROW LEVEL SECURITY;

-- Workers can view all profiles (for care team display)
CREATE POLICY "Workers can view all profiles"
  ON public.worker_profiles FOR SELECT
  TO authenticated
  USING (true);

-- Workers can update their own profile
CREATE POLICY "Workers can update own profile"
  ON public.worker_profiles FOR UPDATE
  TO authenticated
  USING (auth.uid() = user_id);

-- Workers can insert their own profile
CREATE POLICY "Workers can insert own profile"
  ON public.worker_profiles FOR INSERT
  TO authenticated
  WITH CHECK (auth.uid() = user_id);

-- Create user_roles table (per security requirements)
CREATE TYPE public.app_role AS ENUM ('admin', 'nurse', 'cna', 'coordinator', 'supervisor');

CREATE TABLE public.user_roles (
  id UUID PRIMARY KEY DEFAULT gen_random_uuid(),
  user_id UUID REFERENCES auth.users(id) ON DELETE CASCADE NOT NULL,
  role app_role NOT NULL,
  UNIQUE (user_id, role)
);

ALTER TABLE public.user_roles ENABLE ROW LEVEL SECURITY;

-- Security definer function to check roles
CREATE OR REPLACE FUNCTION public.has_role(_user_id UUID, _role app_role)
RETURNS BOOLEAN
LANGUAGE sql
STABLE
SECURITY DEFINER
SET search_path = public
AS $$
  SELECT EXISTS (
    SELECT 1 FROM public.user_roles
    WHERE user_id = _user_id AND role = _role
  )
$$;

-- Roles readable by authenticated users
CREATE POLICY "Roles readable by authenticated"
  ON public.user_roles FOR SELECT
  TO authenticated
  USING (true);

-- Trigger for auto-creating worker profile on signup
CREATE OR REPLACE FUNCTION public.handle_new_user()
RETURNS TRIGGER
LANGUAGE plpgsql
SECURITY DEFINER
SET search_path = public
AS $$
BEGIN
  INSERT INTO public.worker_profiles (user_id, worker_id, display_name)
  VALUES (
    NEW.id,
    'CW-' || LPAD(FLOOR(RANDOM() * 99999)::TEXT, 5, '0'),
    COALESCE(NEW.raw_user_meta_data->>'display_name', 'New Worker')
  );
  INSERT INTO public.user_roles (user_id, role) VALUES (NEW.id, 'nurse');
  RETURN NEW;
END;
$$;

CREATE TRIGGER on_auth_user_created
  AFTER INSERT ON auth.users
  FOR EACH ROW EXECUTE FUNCTION public.handle_new_user();

-- Timestamp update function
CREATE OR REPLACE FUNCTION public.update_updated_at_column()
RETURNS TRIGGER AS $$
BEGIN
  NEW.updated_at = now();
  RETURN NEW;
END;
$$ LANGUAGE plpgsql SET search_path = public;

CREATE TRIGGER update_worker_profiles_updated_at
  BEFORE UPDATE ON public.worker_profiles
  FOR EACH ROW EXECUTE FUNCTION public.update_updated_at_column();